# TestFastapi

./: .gitignore  Dockerfile  README.md  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
